# ras-train-timetabling

./: .github  .gitignore  CMakeLists.txt  Makefile  README.md  data.cpp  data.h  main  main.cpp  model.lp  params.cpp  params.h  program_params.json  solver.cpp  solver.h
cmake/: README.md
data/: array.h  data.cpp  data.h  data1.json  data1_compact.json  data1_compact_tight_windows.json  data1_compact_tight_windows_2_trains.json  data1_compact_tight_windows_4_trains.json  data1_compact_tight_windows_5_trains.json  data1_compact_tight_windows_6_trains.json  data3_raw.txt  graph.cpp  graph.h  instance.h  medium_toy.json  micro_toy.json  mini_toy.json  mows.cpp  mows.h  network.cpp  network.h  path.cpp  path.h  prices.cpp  prices.h  segments.cpp  segments.h  small_toy.json  speeds.cpp  speeds.h  time_windows.cpp  time_windows.h  toy.json  toy_raw.txt  trains.cpp  trains.h
data/single_train/: data1_compact_tight_windows_train_2.json  data1_compact_tight_windows_train_3.json  data1_compact_tight_windows_train_4.json
data/tight_tw/: data1-12.json  data1-1_2_3_4_5_7.json  data1-1_2_3_4_8_9.json  data1-1_3.json  data1-1_5.json  data1-1_7_11.json  data1-1_9.json  data1-3_7_10.json  data1-3_7_9.json  data1-8.json  data1-9.json
data/tight_tw/1_train/: data1-5.json  data1-7.json
data/tight_tw/2_trains/: data1-1_4.json  data1-1_6.json
graph/: data.cpp  data.h  graph.cpp  graph.h  node.h  train_graph.cpp  train_graph.h
grapher/: gnuplot-iostream.h  grapher.cpp  grapher.h
network/: Makefile  arc.h  graph.cpp  graph.h  junction.h  mow.h  node.h  problem.h  segment.h  track.cpp  track.h  train.cpp  train.h
params/: params.cpp  params.h
preprocessing/: Makefile  data.cpp  data.h  graph_generator.cpp  graph_generator.h
ras-instances/: README.md  example-bigger.json  example.json
ras-instances/normal_tw/: data1.json
ras-instances/raw/: data1_raw.txt  data2_raw.txt
ras-instances/tight_tw/1_train/: data1-10.json  data1-11.json  data1-6.json  data1-8.json
ras-instances/tight_tw/2_trains/: data1-1_10.json  data1-1_11.json  data1-1_12.json  data1-1_7.json  data1-1_8.json  data1-6_10.json  data1-8_9.json
ras-instances/tight_tw/3_trains/: data1-1_2_3.json  data1-1_2_4.json  data1-1_4_7.json  data1-3_8_9.json
ras-instances/tight_tw/4_trains/: data1-1_2_8_9.json
results/: data1_compact_1_train_UB_0.txt  data1_compact_1_train_UB_1000.txt  data1_compact_1_train_UB_500.txt  data1_compact_1_train_fixing_first_arc_UB_0.txt  data1_compact_1_train_fixing_first_arc_UB_1000.txt  data1_compact_1_train_fixing_first_arc_UB_500.txt  data1_compact_1_train_fixing_first_arc_alt_UB_500.txt  data1_compact_1_train_fixing_first_last_arc_UB_0.txt  data1_compact_1_train_fixing_first_last_arc_UB_1000.txt  data1_compact_1_train_fixing_first_last_arc_UB_500.txt  data1_compact_1_train_fixing_first_last_arc_alt_UB_500.txt
solver/: mip_columns.raw.cpp  mip_rows.raw.cpp  mip_solver.cpp  mip_solver.h  sequential_solver.cpp  sequential_solver.h  sequential_solver_heuristic.cpp  sequential_solver_heuristic.h  solver.cpp  solver.h  solver_heuristic.cpp  solver_heuristic.h
solver/columns/: d.raw.cpp  e.raw.cpp  theta.raw.cpp  x.raw.cpp  y.raw.cpp  z.raw.cpp
solver/rows/: can_take_siding.raw.cpp  ensure_sa_visit.raw.cpp  enter_tau.raw.cpp  exact_time.raw.cpp  exit_sigma.raw.cpp  flow.raw.cpp  headway.raw.cpp  headway1.raw.cpp  headway2.raw.cpp  headway3.raw.cpp  headway4.raw.cpp  heavy_siding.raw.cpp  min_time.raw.cpp  one_train.raw.cpp  positive_obj.raw.cpp  sa_delay.raw.cpp  set_theta.raw.cpp  set_y.raw.cpp  set_z.raw.cpp  wt_1.raw.cpp  wt_2.raw.cpp  z_sa.raw.cpp
